--- a/Guess My number/style.css
+++ b/Guess My number/style.css
@@ -14,7 +14,7 @@ html {
 body {
   font-family: "Press Start 2P", sans-serif;
   color: #eee;
-  background-color: #222;
+  background-color: #0099ff;
   /* background-color: #60b347; */
 }
 
@@ -72,8 +72,8 @@ h1 {
 .between {
   font-size: 1.4rem;
   position: absolute;
-  top: 2rem;
-  right: 2rem;
+  top: 30rem;
+  right: 1rem;
 }
 
 .again {
@@ -110,6 +110,8 @@ h1 {
 }
 
 .message {
+  padding: 20px;
+  margin-top: 20px;
   margin-bottom: 8rem;
   height: 3rem;
 }
