--- a/Pig Game/style.css
+++ b/Pig Game/style.css
@@ -158,12 +158,24 @@ main {
 }
 
 .player--winner {
-  background-color: #2f2f2f;
+  background-color: #3c4746;
 }
 
 .player--winner .name {
   font-weight: 700;
-  color: #c7365f;
+  color: #c3e629;
+}
+
+.player--winner .score {
+  color: #c3e629;
+}
+
+.player--winner .current {
+  background-color: #c3e629;
+  color: black;
+}
+.player--winner .current-label {
+  color: black;
 }
 
 .hidden {
